resoureceManager 구조 변경 중.
resoureceManager 구조 변경 중.
내일 오전 중으로 끝낼 예정.

--- a/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj.filters
+++ b/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj.filters
@@ -158,6 +158,9 @@
     <ClInclude Include="include\Core\Resource\Resource\PixelShader.h">
       <Filter>Header</Filter>
     </ClInclude>
+    <ClInclude Include="include\Core\Resource\Resource\Texture.h">
+      <Filter>Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Pass\Paritcle\BasicParticlePass.cpp">
@@ -272,6 +275,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="src\Core\Resource\Resource\VertexShader.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Core\Resource\Resource\Texture.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
