--- a/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj
+++ b/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj
@@ -268,6 +268,7 @@
     <ClInclude Include="include\Core\Resource\Resource\ResourceBase.h" />
     <ClInclude Include="include\Core\Resource\Resource\PixelShader.h" />
     <ClInclude Include="include\Core\Resource\Resource\VertexShader.h" />
+    <ClInclude Include="include\Core\Resource\Resource\Texture.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Pass\3DObject\SkyBoxPass.cpp" />
@@ -291,6 +292,7 @@
     <ClCompile Include="src\Core\Resource\Resource\ComputeShader.cpp" />
     <ClCompile Include="src\Core\Resource\Resource\GeometryShader.cpp" />
     <ClCompile Include="src\Core\Resource\Resource\PixelShader.cpp" />
+    <ClCompile Include="src\Core\Resource\Resource\Texture.cpp" />
     <ClCompile Include="src\Core\Resource\Resource\VertexShader.cpp" />
     <ClCompile Include="src\dllmain.cpp" />
     <ClCompile Include="src\Core\DirectX11\DXEngine.cpp" />
