--- a/DUOLGame/DUOLGame.vcxproj.filters
+++ b/DUOLGame/DUOLGame.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\DUOLGame\TestScripts\ThirdPersonCamera.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\DUOLGame\TestScripts\DebugUI.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\DUOLGame\Application.h">
@@ -96,6 +99,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Include\DUOLGame\TestScripts\ThirdPersonCamera.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\DUOLGame\TestScripts\DebugUI.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
